fixes wierd long table overflow scroll issue

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,4 +1,6 @@
-
+body {
+  overflow-x: hidden;
+}
 
 .toast-close {
   color: var(--colorBlack);
